0.84.01
=======

- add Exit.UserCancelled for <ctrl-c>
- Run() now exits with returnncode (used be Main() only)
- ensure stdout/stderr are not ASCII, and will not raise Unicode exceptions
  if not set for UTF-8
- deprecate ProgressView in favor of ViewProgress
  (check argument order when switching)


0.84.00
=======

- fix `bool(Trivalent.unknown)` (Python 2.7 only)
- `Job`: wait for passwords to be written
- add Sentinal: generates unique objects with helpful __repr__s
- add Singleton: used to turn a class into a single instance of that class
- add Var: := for Python's less than 3.8

backwards-incompatible change:
- Job now raises TimeoutError instead of stuffing it into stderr


0.83.03
=======

internal improvements


0.83.02
=======

print(..., border='table') now supports int/long/datetime.*/bool and
aligns accordingly


0.83.01
=======

emit "--no-[flag]" instead of "--[flag]" when force_default is True
use .wait() for sub-process based Execute/Job to avoid zombie processes


0.83.00
=======

parameters:
- ignore equals while processing positional arguments

utilities:
- add table printing capability to print()
- check for active process before checking terminal status (Job)


0.82.0
======

support "-a=..."

add radio option to parameters: if specified, only one parameter from each
radio group may be used

get_response() renamed to input(), now acts like input by default

backwards-incompatible change:
- undo change made in 0.80.0  args after a vararg no longer treated as varargs


0.81.10
=======

ProgressView iterator/wrapper now accepts 'none' as a view mode, but always
displays at least the message (if any).


0.81.9
======

exit gracefully on ctrl-c
support rulebreaks in box()
make style an optional positional argument in box()
smartly truncate top/bottom lines in box() that are longer than content
add border keyword to print that auto-calls box()


0.81.8
======

ProgressView only prints message if stdout is redirected